test/bad/duplicate_field.veld
// BAD: duplicate field name in model
model User {
  id: string
  id: int
}

